# gst-plugins-qti-oss

./: .gitignore  README.md
aziot_client/: CMakeLists.txt
azure-client/: CMakeLists.txt  sample1.c
gst-ml-metadata/: CMakeLists.txt  azc.c  azc.h
gst-plugin-mle/mle_engine/: tflite_base.cc
gst-plugin-overlay/: CMakeLists.txt  gstoverlay.cc  gstoverlay.h  msg.c  msg.cc  msg.h  tracker.cc  tracker.h
python/gstreamer/: __init__.py  gst_hacks.py  gst_objects_info_meta.py  gst_tools.py  mylog.py  myplugin.py  test.py  utils.py
